deploy update